# zeedle

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  Packager.linux.toml  Packager.windows.toml  README-zh.md  README.md  build.rs
.agents/skills/i18n-update/: SKILL.md
.cargo/: config.toml
docs/superpowers/plans/: 2026-07-13-custom-title-bar.md
docs/superpowers/specs/: 2026-07-13-custom-title-bar-design.md
examples/: rodio_usage.rs
lang/: Zeedle.pot
lang/de/LC_MESSAGES/: Zeedle.po  zeedle.po
lang/es/LC_MESSAGES/: Zeedle.po  zeedle.po
lang/fr/LC_MESSAGES/: Zeedle.po  zeedle.po
lang/ru/LC_MESSAGES/: Zeedle.po  zeedle.po
lang/zh_CN/LC_MESSAGES/: Zeedle.po
packager/: Packager.linux.toml  Packager.windows.toml  pack-appimage.sh  pack-deb.sh  pack-nsis.ps1
packager/debian/: postinst
src/: config.rs  main.rs  spectrum.rs  utils.rs
ui/: app.slint  button.slint  control_panel.slint  lyric.slint  lyrics_panel.slint  search_panel.slint  settings_panel.slint  sidebar.slint  song.slint  song_list.slint  song_list_view.slint  spectrum.slint  theme.slint  title_bar.slint  trigger.slint  types.slint
