[package]
name = "Zeedle"
version = "0.5.4"
edition = "2024"
authors = ["Jordan Haidee"]
description = "Music at the speed of a blink, designed for pure simplicity\nBuilt by [Rodio](https://github.com/RustAudio/rodio) and [Slint UI](https://slint.dev)"
repository = "https://github.com/Jordan-Haidee/Zeedle"

[dependencies]
dark-light = "2"
chrono = "0.4.42"
env_logger = "0.11.8"
home = "0.5.11"
image = "0.25.8"
lofty = "0.24.0"
log = "0.4.28"
pinyin = "0.10.0"
rand = "0.9.2"
rayon = "1.11.0"
rfd = "0.15"
rodio = "0.22.2"
rustfft = "6.2.0"
serde = { version = "1.0.223", features = ["derive"] }
single-instance = "0.3.3"
slint = { version = "=1.17.1", default-features = false, features = [
    "backend-winit",
    "renderer-skia",
    "accessibility",
    "compat-1-2",
    "std",
    "unstable-winit-030",
] }
toml = "0.9.5"
open = "5.4.0"

[build-dependencies]
slint-build = { version = "=1.17.1" }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.17"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
